NaiveTigerCompiler/obj/Debug/TigerParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 3.3.1.7705
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// $ANTLR 3.3.1.7705 Tiger.g3 2011-06-16 16:37:15

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 219
// Unreachable code detected.
#pragma warning disable 162


	using NaiveTigerCompiler.AbstractSyntax;
	using NaiveTigerCompiler.SymbolTable;


using System.Collections.Generic;
using Antlr.Runtime;

namespace NaiveTigerCompiler
{
[System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.3.1.7705")]
[System.CLSCompliant(false)]
public partial class TigerParser : Antlr.Runtime.Parser
{
	internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "And", "Array", "Assign", "BlockComment", "Break", "Colon", "Comma", "Divide", "Do", "Dot", "Else", "End", "Equal", "For", "Function", "GreaterEqual", "GreaterThan", "Identifier", "If", "In", "IntegerLiteral", "LeftBrace", "LeftBrack", "LeftParen", "LessEqual", "LessThan", "Let", "LineComment", "Minus", "Nil", "NotEqual", "Of", "Or", "Plus", "RightBrace", "RightBrack", "RightParen", "Semicolon", "StringLiteral", "Then", "Times", "To", "Type", "Var", "While", "WhiteSpace"
	};
	public const int EOF=-1;
	public const int And=4;
	public const int Array=5;
	public const int Assign=6;
	public const int BlockComment=7;
	public const int Break=8;
	public const int Colon=9;
	public const int Comma=10;
	public const int Divide=11;
	public const int Do=12;
	public const int Dot=13;
	public const int Else=14;
	public const int End=15;
	public const int Equal=16;
	public const int For=17;
	public const int Function=18;
	public const int GreaterEqual=19;
	public const int GreaterThan=20;
	public const int Identifier=21;
	public const int If=22;
	public const int In=23;
	public const int IntegerLiteral=24;
	public const int LeftBrace=25;
	public const int LeftBrack=26;
	public const int LeftParen=27;
	public const int LessEqual=28;
	public const int LessThan=29;
	public const int Let=30;
	public const int LineComment=31;
	public const int Minus=32;
	public const int Nil=33;
	public const int NotEqual=34;
	public const int Of=35;
	public const int Or=36;
	public const int Plus=37;
	public const int RightBrace=38;
	public const int RightBrack=39;
	public const int RightParen=40;
	public const int Semicolon=41;
	public const int StringLiteral=42;
	public const int Then=43;
	public const int Times=44;
	public const int To=45;
	public const int Type=46;
	public const int Var=47;
	public const int While=48;
	public const int WhiteSpace=49;

	// delegates
	// delegators

	public TigerParser( ITokenStream input )
		: this( input, new RecognizerSharedState() )
	{
	}
	public TigerParser(ITokenStream input, RecognizerSharedState state)
		: base(input, state)
	{
		this.state.ruleMemo = new System.Collections.Generic.Dictionary<int, int>[37+1];


		OnCreated();
	}
		

	public override string[] TokenNames { get { return TigerParser.tokenNames; } }
	public override string GrammarFileName { get { return "Tiger.g3"; } }


	partial void OnCreated();
	partial void EnterRule(string ruleName, int ruleIndex);
	partial void LeaveRule(string ruleName, int ruleIndex);

	#region Rules

	partial void EnterRule_program();
	partial void LeaveRule_program();

	// $ANTLR start "program"
	// Tiger.g3:25:1: public program returns [Expression r] : expression ;
	[GrammarRule("program")]
	public Expression program()
	{
		EnterRule_program();
		EnterRule("program", 1);
		TraceIn("program", 1);
		Expression r = default(Expression);

		Expression expression1 = default(Expression);

		try { DebugEnterRule(GrammarFileName, "program");
		DebugLocation(25, 1);
		try
		{
			// Tiger.g3:26:2: ( expression )
			DebugEnterAlt(1);
			// Tiger.g3:26:4: expression
			{
			DebugLocation(26, 4);
			PushFollow(Follow._expression_in_program66);
			expression1=expression();
			PopFollow();
			if (state.failed) return r;
			DebugLocation(27, 3);
			if (state.backtracking == 0)
			{

							r = expression1;
						
			}

			}

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		}
		finally
		{
			TraceOut("program", 1);
			LeaveRule("program", 1);
			LeaveRule_program();
		}
		DebugLocation(30, 1);
		} finally { DebugExitRule(GrammarFileName, "program"); }
		return r;

	}
	// $ANTLR end "program"


	partial void EnterRule_expression();
	partial void LeaveRule_expression();

	// $ANTLR start "expression"
	// Tiger.g3:32:1: expression returns [Expression r] : orExpression ;
	[GrammarRule("expression")]
	private Expression expression()
	{
		EnterRule_expression();
		EnterRule("expression", 2);
		TraceIn("expression", 2);
		Expression r = default(Expression);

		Expression orExpression2 = default(Expression);

		try { DebugEnterRule(GrammarFileName, "expression");
		DebugLocation(32, 1);
		try
		{
			// Tiger.g3:33:2: ( orExpression )
			DebugEnterAlt(1);
			// Tiger.g3:33:4: orExpression
			{
			DebugLocation(33, 4);
			PushFollow(Follow._orExpression_in_expression85);
			orExpression2=orExpression();
			PopFollow();
			if (state.failed) return r;
			DebugLocation(34, 3);
			if (state.backtracking == 0)
			{

							r = orExpression2;
						
			}

			}

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		}
		finally
		{
			TraceOut("expression", 2);
			LeaveRule("expression", 2);
			LeaveRule_expression();
		}
		DebugLocation(37, 1);
		} finally { DebugExitRule(GrammarFileName, "expression"); }
		return r;

	}
	// $ANTLR end "expression"


	partial void EnterRule_orExpression();
	partial void LeaveRule_orExpression();

	// $ANTLR start "orExpression"
	// Tiger.g3:39:1: orExpression returns [Expression r] : a= andExpression ( Or b= andExpression )* ;
	[GrammarRule("orExpression")]
	private Expression orExpression()
	{
		EnterRule_orExpression();
		EnterRule("orExpression", 3);
		TraceIn("orExpression", 3);
		Expression r = default(Expression);

		CommonToken Or3 = default(CommonToken);
		Expression a = default(Expression);
		Expression b = default(Expression);

		try { DebugEnterRule(GrammarFileName, "orExpression");
		DebugLocation(39, 1);
		try
		{
			// Tiger.g3:40:2: (a= andExpression ( Or b= andExpression )* )
			DebugEnterAlt(1);
			// Tiger.g3:40:4: a= andExpression ( Or b= andExpression )*
			{
			DebugLocation(40, 6);
			PushFollow(Follow._andExpression_in_orExpression108);
			a=andExpression();
			PopFollow();
			if (state.failed) return r;
			DebugLocation(41, 3);
			if (state.backtracking == 0)
			{

							r = a;
						
			}
			DebugLocation(44, 3);
			// Tiger.g3:44:3: ( Or b= andExpression )*
			try { DebugEnterSubRule(1);
			while (true)
			{
				int alt1=2;
				try { DebugEnterDecision(1, false);
				int LA1_0 = input.LA(1);

				if ((LA1_0==Or))
				{
					alt1 = 1;
				}


				} finally { DebugExitDecision(1); }
				switch ( alt1 )
				{
				case 1:
					DebugEnterAlt(1);
					// Tiger.g3:44:4: Or b= andExpression
					{
					DebugLocation(44, 4);
					Or3=(CommonToken)Match(input,Or,Follow._Or_in_orExpression117); if (state.failed) return r;
					DebugLocation(44, 9);
					PushFollow(Follow._andExpression_in_orExpression123);
					b=andExpression();
					PopFollow();
					if (state.failed) return r;
					DebugLocation(45, 3);
					if (state.backtracking == 0)
					{

									r = new IfExpression(new Position(Or3), r, new IntegerExpression(new Position(Or3), 1), b);
								
					}

					}
					break;

				default:
					goto loop1;
				}
			}

			loop1:
				;

			} finally { DebugExitSubRule(1); }


			}

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		}
		finally
		{
			TraceOut("orExpression", 3);
			LeaveRule("orExpression", 3);
			LeaveRule_orExpression();
		}
		DebugLocation(49, 1);
		} finally { DebugExitRule(GrammarFileName, "orExpression"); }
		return r;

	}
	// $ANTLR end "orExpression"


	partial void EnterRule_andExpression();
	partial void LeaveRule_andExpression();

	// $ANTLR start "andExpression"
	// Tiger.g3:51:1: andExpression returns [Expression r] : a= relationalExpression ( And b= relationalExpression )* ;
	[GrammarRule("andExpression")]
	private Expression andExpression()
	{
		EnterRule_andExpression();
		EnterRule("andExpression", 4);
		TraceIn("andExpression", 4);
		Expression r = default(Expression);

		CommonToken And4 = default(CommonToken);
		Expression a = default(Expression);
		Expression b = default(Expression);

		try { DebugEnterRule(GrammarFileName, "andExpression");
		DebugLocation(51, 1);
		try
		{
			// Tiger.g3:52:2: (a= relationalExpression ( And b= relationalExpression )* )
			DebugEnterAlt(1);
			// Tiger.g3:52:4: a= relationalExpression ( And b= relationalExpression )*
			{
			DebugLocation(52, 6);
			PushFollow(Follow._relationalExpression_in_andExpression152);
			a=relationalExpression();
			PopFollow();
			if (state.failed) return r;
			DebugLocation(53, 3);
			if (state.backtracking == 0)
			{

							r = a;
						
			}
			DebugLocation(56, 3);
			// Tiger.g3:56:3: ( And b= relationalExpression )*
			try { DebugEnterSubRule(2);
			while (true)
			{
				int alt2=2;
				try { DebugEnterDecision(2, false);
				int LA2_0 = input.LA(1);

				if ((LA2_0==And))
				{
					alt2 = 1;
				}


				} finally { DebugExitDecision(2); }
				switch ( alt2 )
				{
				case 1:
					DebugEnterAlt(1);
					// Tiger.g3:56:4: And b= relationalExpression
					{
					DebugLocation(56, 4);
					And4=(CommonToken)Match(input,And,Follow._And_in_andExpression161); if (state.failed) return r;
					DebugLocation(56, 10);
					PushFollow(Follow._relationalExpression_in_andExpression167);
					b=relationalExpression();
					PopFollow();
					if (state.failed) return r;
					DebugLocation(57, 3);
					if (state.backtracking == 0)
					{

									r = new IfExpression(new Position(And4), r, b, new IntegerExpression(new Position(And4), 0));
								
					}

					}
					break;

				default:
					goto loop2;
				}
			}

			loop2:
				;

			} finally { DebugExitSubRule(2); }


			}

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		}
		finally
		{
			TraceOut("andExpression", 4);
			LeaveRule("andExpression", 4);
			LeaveRule_andExpression();
		}
		DebugLocation(61, 1);
		} finally { DebugExitRule(GrammarFileName, "andExpression"); }
		return r;

	}
	// $ANTLR end "andExpression"


	partial void EnterRule_relationalExpression();
	partial void LeaveRule_relationalExpression();

	// $ANTLR start "relationalExpression"
	// Tiger.g3:63:1: relationalExpression returns [Expression r] : a= additiveExpression ( (o= Equal |o= NotEqual |o= LessThan |o= LessEqual |o= GreaterThan |o= GreaterEqual ) b= additiveExpression )? ;
	[GrammarRule("relationalExpression")]
	private Expression relationalExpression()
	{
		EnterRule_relationalExpression();
		EnterRule("relationalExpression", 5);
		TraceIn("relationalExpression", 5);
		Expression r = default(Expression);

		CommonToken o = default(CommonToken);
		Expression a = default(Expression);
		Expression b = default(Expression);


			Operator op = 0;

		try { DebugEnterRule(GrammarFileName, "relationalExpression");
		DebugLocation(63, 1);
		try
		{
			// Tiger.g3:68:2: (a= additiveExpression ( (o= Equal |o= NotEqual |o= LessThan |o= LessEqual |o= GreaterThan |o= GreaterEqual ) b= additiveExpression )? )
			DebugEnterAlt(1);
			// Tiger.g3:68:4: a= additiveExpression ( (o= Equal |o= NotEqual |o= LessThan |o= LessEqual |o= GreaterThan |o= GreaterEqual ) b= additiveExpression )?
			{
			DebugLocation(68, 6);
			PushFollow(Follow._additiveExpression_in_relationalExpression200);
			a=additiveExpression();
			PopFollow();
			if (state.failed) return r;
			DebugLocation(69, 3);
			if (state.backtracking == 0)
			{

							r = a;
						
			}
			DebugLocation(72, 3);
			// Tiger.g3:72:3: ( (o= Equal |o= NotEqual |o= LessThan |o= LessEqual |o= GreaterThan |o= GreaterEqual ) b= additiveExpression )?
			int alt4=2;
			try { DebugEnterSubRule(4);
			try { DebugEnterDecision(4, false);
			switch (input.LA(1))
			{
			case Equal:
				{
				alt4 = 1;
				}
				break;
			case NotEqual:
				{
				alt4 = 1;
				}
				break;
			case LessThan:
				{
				alt4 = 1;
				}
				break;
			case LessEqual:
				{
				alt4 = 1;
				}
				break;
			case GreaterThan:
				{
				alt4 = 1;
				}
				break;
			case GreaterEqual:
				{
				alt4 = 1;
				}
				break;
			}

			} finally { DebugExitDecision(4); }
			switch (alt4)
			{
			case 1:
				DebugEnterAlt(1);
				// Tiger.g3:72:4: (o= Equal |o= NotEqual |o= LessThan |o= LessEqual |o= GreaterThan |o= GreaterEqual ) b= additiveExpression
				{
				DebugLocation(72, 4);
				// Tiger.g3:72:4: (o= Equal |o= NotEqual |o= LessThan |o= LessEqual |o= GreaterThan |o= GreaterEqual )
				int alt3=6;
				try { DebugEnterSubRule(3);
				try { DebugEnterDecision(3, false);
				switch (input.LA(1))
				{
				case Equal:
					{
					alt3 = 1;
					}
					break;
				case NotEqual:
					{
					alt3 = 2;
					}
					break;
				case LessThan:
					{
					alt3 = 3;
					}
					break;
				case LessEqual:
					{
					alt3 = 4;
					}
					break;
				case GreaterThan:
					{
					alt3 = 5;
					}
					break;
				case GreaterEqual:
					{
					alt3 = 6;
					}
					break;
				default:
					{
						if (state.backtracking>0) {state.failed=true; return r;}
						NoViableAltException nvae = new NoViableAltException("", 3, 0, input);
						DebugRecognitionException(nvae);
						throw nvae;
					}
				}

				} finally { DebugExitDecision(3); }
				switch (alt3)
				{
				case 1:
					DebugEnterAlt(1);
					// Tiger.g3:73:4: o= Equal
					{
					DebugLocation(73, 6);
					o=(CommonToken)Match(input,Equal,Follow._Equal_in_relationalExpression218); if (state.failed) return r;
					DebugLocation(73, 14);
					if (state.backtracking == 0)
					{
						op = Operator.Equal;
					}

					}
					break;
				case 2:
					DebugEnterAlt(2);
					// Tiger.g3:74:5: o= NotEqual
					{
					DebugLocation(74, 7);
					o=(CommonToken)Match(input,NotEqual,Follow._NotEqual_in_relationalExpression230); if (state.failed) return r;
					DebugLocation(74, 18);
					if (state.backtracking == 0)
					{
						op = Operator.NotEqual;
					}

					}
					break;
				case 3:
					DebugEnterAlt(3);
					// Tiger.g3:75:5: o= LessThan
					{
					DebugLocation(75, 7);
					o=(CommonToken)Match(input,LessThan,Follow._LessThan_in_relationalExpression242); if (state.failed) return r;
					DebugLocation(75, 18);
					if (state.backtracking == 0)
					{
						op = Operator.LessThan;
					}

					}
					break;
				case 4:
					DebugEnterAlt(4);
					// Tiger.g3:76:5: o= LessEqual
					{
					DebugLocation(76, 7);
					o=(CommonToken)Match(input,LessEqual,Follow._LessEqual_in_relationalExpression254); if (state.failed) return r;
					DebugLocation(76, 19);
					if (state.backtracking == 0)
					{
						op = Operator.LessEqual;
					}

					}
					break;
				case 5:
					DebugEnterAlt(5);
					// Tiger.g3:77:5: o= GreaterThan
					{
					DebugLocation(77, 7);
					o=(CommonToken)Match(input,GreaterThan,Follow._GreaterThan_in_relationalExpression266); if (state.failed) return r;
					DebugLocation(77, 21);
					if (state.backtracking == 0)
					{
						op = Operator.GreaterThan;
					}

					}
					break;
				case 6:
					DebugEnterAlt(6);
					// Tiger.g3:78:5: o= GreaterEqual
					{
					DebugLocation(78, 7);
					o=(CommonToken)Match(input,GreaterEqual,Follow._GreaterEqual_in_relationalExpression278); if (state.failed) return r;
					DebugLocation(78, 22);
					if (state.backtracking == 0)
					{
						op = Operator.GreaterThan;
					}

					}
					break;

				}
				} finally { DebugExitSubRule(3); }

				DebugLocation(79, 7);
				PushFollow(Follow._additiveExpression_in_relationalExpression290);
				b=additiveExpression();
				PopFollow();
				if (state.failed) return r;
				DebugLocation(80, 3);
				if (state.backtracking == 0)
				{

								r = new OperatorExpression(new Position(o), a, op, b);
							
				}

				}
				break;

			}
			} finally { DebugExitSubRule(4); }


			}

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		}
		finally
		{
			TraceOut("relationalExpression", 5);
			LeaveRule("relationalExpression", 5);
			LeaveRule_relationalExpression();
		}
		DebugLocation(83, 1);
		} finally { DebugExitRule(GrammarFileName, "relationalExpression"); }
		return r;

	}
	// $ANTLR end "relationalExpression"


	partial void EnterRule_additiveExpression();
	partial void LeaveRule_additiveExpression();

	// $ANTLR start "additiveExpression"
	// Tiger.g3:85:1: additiveExpression returns [Expression r] : a= multiplicativeExpression ( (o= Plus |o= Minus ) b= multiplicativeExpression )* ;
	[GrammarRule("additiveExpression")]
	private Expression additiveExpression()
	{
		EnterRule_additiveExpression();
		EnterRule("additiveExpression", 6);
		TraceIn("additiveExpression", 6);
		Expression r = default(Expression);

		CommonToken o = default(CommonToken);
		Expression a = default(Expression);
		Expression b = default(Expression);


			Operator op = 0;

		try { DebugEnterRule(GrammarFileName, "additiveExpression");
		DebugLocation(85, 1);
		try
		{
			// Tiger.g3:90:2: (a= multiplicativeExpression ( (o= Plus |o= Minus ) b= multiplicativeExpression )* )
			DebugEnterAlt(1);
			// Tiger.g3:90:4: a= multiplicativeExpression ( (o= Plus |o= Minus ) b= multiplicativeExpression )*
			{
			DebugLocation(90, 6);
			PushFollow(Follow._multiplicativeExpression_in_additiveExpression320);
			a=multiplicativeExpression();
			PopFollow();
			if (state.failed) return r;
			DebugLocation(91, 3);
			if (state.backtracking == 0)
			{

							r = a;
						
			}
			DebugLocation(94, 3);
			// Tiger.g3:94:3: ( (o= Plus |o= Minus ) b= multiplicativeExpression )*
			try { DebugEnterSubRule(6);
			while (true)
			{
